Update about section, contact and categories

--- a/Pages/Home/_AboutUs.cshtml
+++ b/Pages/Home/_AboutUs.cshtml
@@ -8,8 +8,9 @@
                 <div class="line"></div>
                 <div class="clearfix about-desc-wrap">
                     <div class="about-desc">
-                        <p>We are a small software development studio located in Sibiu, Romania. We launched in 2010 as a two-men company and went through a steady progress since then with both enlarging our team and keeping our clients happy with the work we’ve done. </p>
-                        <p>We really value a good atmosphere in the office and to achieve it we choose our team members with great care. This means that all the existing colleagues have a word to say when enlarging the team.</p>
+                        <p>We're the AgileFreaks. We believe in openness, education and clean code.</p>
+                        <p>We reside in Sibiu, Romania. We see openness as a defining element in how we create value. We think that the companies of the future should cultivate relationships of trust with customers, stakholders, and society as whole.</p>
+                        <p>We want to gain access to the best possible education for ourselves and our collegues.</p>
                         <p>Our goal is to have a team with self-driven, highly motivated people that find good friends in each other. Experience tells us that everything will fall into place from then on.</p>
                     </div>
                     <div class="wrap-about-box clearfix">
@@ -48,7 +49,7 @@
                 <span class="job-name">Co-Founder & Stuff</span>
                 <div>
                     <a href="https://github.com/levelboy" target="_blank" class="git-icon" title="github"></a>
-                    <a href="http://ro.linkedin.com/in/nistoradrian" class="linkedin-icon" title="linkedin"></a>
+                    <a href="https://ro.linkedin.com/in/adriannistor" class="linkedin-icon" title="linkedin"></a>
                     <a href="#twitter" class="twitter-icon" title="twitter"></a>
                 </div>
                 <p>Since I was little I was fascinated with computers and I knew my life is going to revolve around them. I tried different (weird) jobs in my past: desktop publisher, IT specialist, embedded software engineer.</p>
@@ -56,16 +57,13 @@
                 <p>I think of myself as an optimistic, quiet and self driven person that enjoys the simple things in life.</p>
             </div>
             <div class="team-member second-row clearfix">
-                <img src="~/img/BadilaCristian.png" class="team-img" alt="personal-photo" />
-                <h4>Cristi Badila</h4>
+                <img src="~/img/DoruParvu.png" class="team-img" alt="personal-photo" />
+                <h4>Tudor Cazacu</h4>
                 <span class="job-name">Programmer</span>
                 <div>
-                    <a href="https://github.com/cristi-badila" target="_blank" class="git-icon" title="github"></a>
-                    <a href="http://ro.linkedin.com/pub/cristian-badila/5a/125/630/" target="_blank" class="linkedin-icon" title="linkedin"></a>
+                    <a href="https://github.com/cazacutudor" target="_blank" class="git-icon" title="github"></a>
                 </div>
-                <p>I am first and foremost a science/technology enthusiast and have been since I read my first science-fiction book and as such, when I got my first computer I instantly knew that I wanted to be a programmer (even though I didn't actually understood what it meant).</p>
-                <p>With that in mind I went on to take courses at schools specialized in programming/technology and finally got to start working as a programmer in 2009.</p>
-                <p>After an initial first year in which I tried to find my place in bigger companies I realized that the best fit for me was a smaller but highly passionate team (Agile Freaks) where I've been working since 2011.</p>
+                <p>I'm the first Roku developer in Romania. Been in the company since highschool, looking forward to what the future brings.</p>
             </div>
             <div class="team-member third-row clearfix">
                 <img src="~/img/DoruParvu.png" class="team-img" alt="personal-photo" />
