--- a/Pages/Home/_Contact.cshtml
+++ b/Pages/Home/_Contact.cshtml
@@ -9,7 +9,7 @@
             <div class="contact-black-line"></div>
             <div class="contact-white-line"></div>
             <div class="contact-black-line"></div>
-            <span class="contact-tagline">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</span>
+            <span class="contact-tagline">Hey there! If you want to work with us, get in touch or simply tell us how much you like Sibiu, use the form below or send us an e-mail at office@agilefreaks.com</span>
             <div class="clearfix contact-form-wrap">
 
                 @using (Html.BeginForm("SendEmail", "ContactUs", FormMethod.Post, new { @class = "contact-form" }))
@@ -37,9 +37,9 @@
                     <div class="line-contact-details"></div>
                     <div class="details-item">
                         <span>Office:</span>
-                        Str. Nicolae Balcescu, nr. 6, ap. 114
+                        Strada Dorului nr. 20
                         <br />
-                        Sibiu, Romania, 550159
+                        Sibiu, Romania, 550352
                     </div>
                     <div class="details-item">
                         <span>Phone:</span>+40 745 857479<br />
