--- a/Pages/Home/_Features.cshtml
+++ b/Pages/Home/_Features.cshtml
@@ -19,72 +19,59 @@
                         <h3>
                             <img src="~/img/icon-constructive.png" alt="" class="big-icon-features" />Constructive debating
                         </h3>
-                        <p>You can always see what’s going on with your product. We will give you access to our internal communication and integration tools so that you know what are we working on and when it’s deployed.</p>
+                        <p>We want to provide you with more than software. We want to encourage a relationship where everyone feels confortable with debating ideas and improvements. </p>
                     </div>
                     <div class="features-item">
                         <h3>
-                            <img src="~/img/icon-sincerity.png" alt="" class="big-icon-features" />Sincerity
+                            <img src="~/img/icon-sincerity.png" alt="" class="big-icon-features" />Experience
                         </h3>
-                        <p>You can always see what’s going on with your product. We will give you access to our internal communication and integration tools so that you know what are we working on and when it’s deployed.</p>
-                    </div>
-                    <div class="features-item">
-                        <h3>
-                            <img src="~/img/icon-transparency.png" alt="" class="big-icon-features" />Transparency
-                        </h3>
-                        <p>You can always see what’s going on with your product. We will give you access to our internal communication and integration tools so that you know what are we working on and when it’s deployed.</p>
-                    </div>
-                    <div class="features-item">
-                        <h3>
-                            <img src="~/img/icon-flexibility.png" alt="" class="big-icon-features" />Flexibility
-                        </h3>
-                        <p>You can always see what’s going on with your product. We will give you access to our internal communication and integration tools so that you know what are we working on and when it’s deployed.</p>
+                        <p> There are few platforms we haven't used. We've always tried to stay on top of whatever is new in terms of technology and programming languages. We want to share our experience with you.</p>
                     </div>
                     <div class="features-item">
                         <h3>
                             <img src="~/img/icon-responsibility.png" alt="" class="big-icon-features" />Responsibility
                         </h3>
-                        <p>You can always see what’s going on with your product. We will give you access to our internal communication and integration tools so that you know what are we working on and when it’s deployed.</p>
+                        <p>Our environment encourages the concept of shared responsability. We will be proactive on the path to success.</p>
                     </div>
                 </div>
                 <!-- End Customer Features Content -->
                 <div class="tab-pane fade in" id="employees-features">
                     <div class="features-item">
                         <h3>
-                            Constructive debating
+                            Not a corporation
                         </h3>
-                        <p> Honest code review from other colleagues.</p>
+                        <p> We're focused on creating value for ourselves and the community. When working together we value trust more than processes.</p>
                     </div>
                     <div class="features-item">
                         <h3>
-                            Cozy environment
+                            Transparency
                         </h3>
-                        <p> The office is fully decorated and also has pleasant music making you feel at home.</p>
+                        <p> Access to everything that happens in the company from budget transparency to wha.</p>
                     </div>
                     <div class="features-item">
                         <h3>
-                            All roads lead to the office
+                            Self-education
                         </h3>
-                        <p> The office is located in the heart of the city so it's easy to find transportation towards it.</p>
+                        <p> Personal budget that you can invest yourself (conference, trainings, books etc.) </p>
                     </div>
                     <div class="features-item">
                         <h3>
-                            Don't code with an empty stomach
+                            A voice
                         </h3>
-                        <p> Meal will be provided by us at a local restaurant called "Pasaj".</p>
+                        <p> We mtake decisions together. We want your ideas and we want you to feel confortable in sharing them.</p>
                     </div>
                     <div class="features-item">
                         <h3>
-                            Participation in technology events
+                            Experience
                         </h3>
-                        <p> You will often be invited to join hackathons and other technology related events.</p>
+                        <p> We've been working with on a variety of technologies, on different product domains since the company's inception in 2010.</p>
                     </div>
                     <div class="features-item">
                         <h3>
-                            Road trips
+                            Technology
                         </h3>
-                        <p> Join the rest of the team on road trips.</p>
+                        <p> We're on a constant path of improvement and innovation.</p>
                     </div>
-
                 </div>
             </div>
         </div>
