Update texts - part2

--- a/Pages/Home/_Contact.cshtml
+++ b/Pages/Home/_Contact.cshtml
@@ -36,18 +36,21 @@
                     <h4>Contact details</h4>
                     <div class="line-contact-details"></div>
                     <div class="details-item">
-                        <span>Office:</span>
+                    <span>Office:</span>
                         Strada Dorului nr. 20
                         <br />
                         Sibiu, Romania, 550352
                     </div>
                     <div class="details-item">
-                        <span>Phone:</span>+40 745 857479<br />
+                    <span>Phone:</span>
+                        +40 745 857479
+                        <br />
                         +40 747 074372
-                   
-                   
                     </div>
-                    <div class="details-item"><span>Email:</span>office@agilefreaks.com</div>
+                    <div class="details-item">
+                    <span>Email:</span>
+                    office@agilefreaks.com
+                    </div>
                 </div>
             </div>
         </div>
