--- a/Pages/Home/_Features.cshtml
+++ b/Pages/Home/_Features.cshtml
@@ -3,12 +3,12 @@
     <div class="features-wrap">
         <div class="container clearfix">
             <ul class="features-tabs " id="featuresTab">
-                <li class="active"><a href="#customer-features">Want to hire us?</a></li>
-                <li><a href="#employees-features">Want to work with us?</a></li>
+                <li class="active"><a href="#employees-features">Want to work with us?</a></li>
+                <li><a href="#customer-features">Want to hire us?</a></li>
             </ul>
             <div class="tab-content">
                 <!-- Customer Features Content -->
-                <div class="tab-pane fade in active clearfix" id="customer-features">
+                <div class="tab-pane fade in" id="customer-features">
                     <div class="features-item">
                         <h3>
                             <img src="~/img/icon-comunication.png" alt="" class="big-icon-features" />Communication
@@ -25,7 +25,7 @@
                         <h3>
                             <img src="~/img/icon-sincerity.png" alt="" class="big-icon-features" />Experience
                         </h3>
-                        <p> There are few platforms we haven't used. We've always tried to stay on top of whatever is new in terms of technology and programming languages. We want to share our experience with you.</p>
+                        <p> There are few platforms we haven't used. We've always tried to stay on top of whatever is new in terms of technology and programming languages. We want to share our experience.</p>
                     </div>
                     <div class="features-item">
                         <h3>
@@ -35,40 +35,40 @@
                     </div>
                 </div>
                 <!-- End Customer Features Content -->
-                <div class="tab-pane fade in" id="employees-features">
+                <div class="tab-pane fade in active clearfix" id="employees-features">
                     <div class="features-item">
                         <h3>
-                            Not a corporation
+                            <img src="~/img/icon-sincerity.png" alt="" class="big-icon-features" />Not a corporation
                         </h3>
                         <p> We're focused on creating value for ourselves and the community. When working together we value trust more than processes.</p>
                     </div>
                     <div class="features-item">
                         <h3>
-                            Transparency
+                            <img src="~/img/icon-transparency.png" alt="" class="big-icon-features" />Transparency
                         </h3>
-                        <p> Access to everything that happens in the company from budget transparency to wha.</p>
+                        <p> Access to everything that happens in the company from budget transparency to everything we're working on.</p>
                     </div>
                     <div class="features-item">
                         <h3>
-                            Self-education
+                            <img src="~/img/icon-comunication.png" alt="" class="big-icon-features" />Education
                         </h3>
-                        <p> Personal budget that you can invest yourself (conference, trainings, books etc.) </p>
+                        <p> Personal budget that you can invest in yourself (conference, trainings, books etc.). Colleagues willing to learn with and from you. </p>
                     </div>
                     <div class="features-item">
                         <h3>
-                            A voice
+                            <img src="~/img/icon-flexibility.png" alt="" class="big-icon-features" />A voice
                         </h3>
-                        <p> We mtake decisions together. We want your ideas and we want you to feel confortable in sharing them.</p>
+                        <p> We make decisions together. We want your ideas and we want you to feel confortable in sharing them.</p>
                     </div>
                     <div class="features-item">
                         <h3>
-                            Experience
+                            <img src="~/img/icon-constructive.png" alt="" class="big-icon-features" />Experience
                         </h3>
                         <p> We've been working with on a variety of technologies, on different product domains since the company's inception in 2010.</p>
                     </div>
                     <div class="features-item">
                         <h3>
-                            Technology
+                            <img src="~/img/icon-comunication.png" alt="" class="big-icon-features" />Technology
                         </h3>
                         <p> We're on a constant path of improvement and innovation.</p>
                     </div>
