--- a/Pages/Home/_Header.cshtml
+++ b/Pages/Home/_Header.cshtml
@@ -13,8 +13,8 @@
             <nav class="nav-collapse collapse" style="height: 0px;">
                 <ul class="nav">
                     <li class="back-top"><a href="#header"><span class="menu-icon icon-top"></span>Top</a></li>
-                    <li><a href="#features"><span class="menu-icon icon-features"></span>Features</a></li>
-                    <li><a href="#about"><span class="menu-icon icon-about"></span>About Us</a></li>
+                    <li><a href="#features"><span class="menu-icon icon-features"></span>Beliefs</a></li>
+                    <li><a href="#about"><span class="menu-icon icon-about"></span>About</a></li>
                     <li><a href="#contact"><span class="menu-icon icon-contact"></span>Contact</a></li>
                 </ul>
             </nav>
