--- a/Pages/Home/_AboutUs.cshtml
+++ b/Pages/Home/_AboutUs.cshtml
@@ -26,7 +26,7 @@
                 </div>
                 <h3>Our team members</h3>
                 <div class="line"></div>
-                <span class="desc-team">When a team outgrows individual performance and learns team confidence, excellence becomes a reality.</span>
+                <span class="desc-team">See if you can find the vegetarian wannabe, cyclist enthusiast, barrista and the youngest member of the team.</span>
             </div>
             <!-- team members -->
             <div class="team-member first-row clearfix">
@@ -80,8 +80,8 @@
                 <img src="~/img/member00.png" class="team-img" alt="personal-photo" />
                 <h4>We want You!</h4>
                 <span class="job-name">Join the awesome Freaks Team</span>
-                <p>Think you have what it takes to be part of our team? Follow the link below to see available positions at Agile Freaks.</p>
-                <a href="#" title="join our team" class="join-our-team">Join our Team</a>
+                <p>Think you have what it takes to be part of our team? We're out on the lookout for Android, iOS and backend developers. Send us a message!</p>
+                <a href="#contact" title="join our team" class="join-our-team">Join our Team</a>
             </div>
 
             <!-- end team members -->
