--- a/Pages/Home/_Features.cshtml
+++ b/Pages/Home/_Features.cshtml
@@ -19,7 +19,7 @@
                         <h3>
                             <img src="~/img/icon-constructive.png" alt="" class="big-icon-features" />Constructive debating
                         </h3>
-                        <p>We want to provide you with more than software. We want to encourage a relationship where everyone feels confortable with debating ideas and improvements. </p>
+                        <p>We want to provide you with more than software. We want to encourage a relationship where everyone feels comfortable with debating ideas and improvements. </p>
                     </div>
                     <div class="features-item">
                         <h3>
