--- a/Pages/Home/_Features.cshtml
+++ b/Pages/Home/_Features.cshtml
@@ -31,7 +31,7 @@
                         <h3>
                             <img src="~/img/icon-responsibility.png" alt="" class="big-icon-features" />Responsibility
                         </h3>
-                        <p>Our environment encourages the concept of shared responsability. We will be proactive on the path to success.</p>
+                        <p>Our environment encourages the concept of shared responsibility. We will be proactive on the path to success.</p>
                     </div>
                 </div>
                 <!-- End Customer Features Content -->
