update Doru's description

--- a/Pages/Home/_AboutUs.cshtml
+++ b/Pages/Home/_AboutUs.cshtml
@@ -9,8 +9,8 @@
                 <div class="clearfix about-desc-wrap">
                     <div class="about-desc">
                         <p>We're the AgileFreaks. We believe in openness, education and clean code.</p>
-                        <p>We reside in Sibiu, Romania. We see openness as a defining element in how we create value. We think that the companies of the future should cultivate relationships of trust with customers, stakholders, and society as whole.</p>
-                        <p>We want to gain access to the best possible education for ourselves and our collegues.</p>
+                        <p>We reside in Sibiu, Romania. We see openness as a defining element in how we create value. We think that the companies of the future should cultivate relationships of trust with customers, colleagues, and society as whole.</p>
+                        <p>We want to gain access to the best possible education for ourselves and our colleagues.</p>
                         <p>Our goal is to have a team with self-driven, highly motivated people that find good friends in each other. Experience tells us that everything will fall into place from then on.</p>
                     </div>
                     <div class="wrap-about-box clearfix">
@@ -58,8 +58,8 @@
             </div>
             <div class="team-member second-row clearfix">
                 <img src="~/img/DoruParvu.png" class="team-img" alt="personal-photo" />
-                <h4>Tudor Cazacu</h4>
-                <span class="job-name">Programmer</span>
+                <h4>Raluca Ionescu</h4>
+                <span class="job-name">iOS Developer</span>
                 <div>
                     <a href="https://github.com/cazacutudor" target="_blank" class="git-icon" title="github"></a>
                 </div>
@@ -73,8 +73,8 @@
                     <a href="https://github.com/pirvudoru" target="_blank" class="git-icon" title="github"></a>
                     <a href="https://twitter.com/dorupirvu" target="_blank" class="twitter-icon" title="twitter"></a>
                 </div>
-                <p>I am a passionate programmer and currently a graduate in Computer Science at "Lucian Blaga" University from Sibiu.</p>
-                <p>Mostly interested in web technologies and software architecture.</p>
+                <p>Passionate programmer. Interests span web technologies, architecture and productivity.</p>
+                <p>I'm a coffee enthusiast in the morning and I appreciate a good software architecture book in the evening.</p>
             </div>
             <div class="team-member third-row clearfix">
                 <img src="~/img/member00.png" class="team-img" alt="personal-photo" />
