Add Raluca description and photo

--- a/Pages/Home/_AboutUs.cshtml
+++ b/Pages/Home/_AboutUs.cshtml
@@ -26,7 +26,7 @@
                 </div>
                 <h3>Our team members</h3>
                 <div class="line"></div>
-                <span class="desc-team">See if you can find the vegetarian wannabe, cyclist enthusiast, barrista and the youngest member of the team.</span>
+                <span class="desc-team">See if you can find the vegetarian wannabe, cyclist enthusiast, barrista and the make-up artist. There are many more you can meet at our office.</span>
             </div>
             <!-- team members -->
             <div class="team-member first-row clearfix">
@@ -57,13 +57,15 @@
                 <p>I think of myself as an optimistic, quiet and self driven person that enjoys the simple things in life.</p>
             </div>
             <div class="team-member second-row clearfix">
-                <img src="~/img/DoruParvu.png" class="team-img" alt="personal-photo" />
+                <img src="~/img/RalucaIonescu.png" class="team-img" alt="personal-photo" />
                 <h4>Raluca Ionescu</h4>
                 <span class="job-name">iOS Developer</span>
                 <div>
-                    <a href="https://github.com/cazacutudor" target="_blank" class="git-icon" title="github"></a>
+                    <a href="https://github.com/RalucaMihaela" target="_blank" class="git-icon" title="github"></a>
+                    <a href="https://ro.linkedin.com/in/ionescur" class="linkedin-icon" title="linkedin"></a>
                 </div>
-                <p>I'm the first Roku developer in Romania. Been in the company since highschool, looking forward to what the future brings.</p>
+                <p>I'm an iOS developer for a few years now. Working with one of the largest video streaming companies in the US.</p>
+                <p>When I'm not programming I'm either reading psychology books or indulging in my second job: make-up artist.</p>              
             </div>
             <div class="team-member third-row clearfix">
                 <img src="~/img/DoruParvu.png" class="team-img" alt="personal-photo" />
