--- a/views/partials/home/contact.hbs
+++ b/views/partials/home/contact.hbs
@@ -10,7 +10,8 @@
             <span class="contact-tagline">Hey there! If you want to work with us, get in touch or simply tell us how much you like Sibiu, use the form below or send us an e-mail at office@agilefreaks.com</span>
             <div class="clearfix contact-form-wrap">
                 <form method="post" action="/contact" class="contact-form">
-                    <input id="notification" type="hidden" value="{{notification}}"/>
+                    <input id="error-message" type="hidden" value="{{errorMessage}}"/>
+                    <input id="success-message" type="hidden" value="{{successMessage}}"/>
                     <fieldset>
                         <textarea name="message" placeholder="Type your message..."></textarea>
 
