Extract config for contact email

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,7 +28,7 @@
             "name" : "AgileFreaks",
             "image" : "http://agilefreaks.com/img/logo.png",
             "telephone" : [ "+40 745 857479", "+40 747 074372" ],
-            "email" : "office@agilefreaks.com",
+            "email" : "{{contactEmail}}",
             "address" : {
                 "@@type" : "PostalAddress",
                 "streetAddress" : "Str. Nicolae Balcescu, nr. 6, ap. 114",
