--- a/views/partials/home/contact.hbs
+++ b/views/partials/home/contact.hbs
@@ -7,7 +7,7 @@
             <div class="contact-black-line"></div>
             <div class="contact-white-line"></div>
             <div class="contact-black-line"></div>
-            <span class="contact-tagline">Hey there! If you want to work with us, get in touch or simply tell us how much you like Sibiu, use the form below or send us an e-mail at office@agilefreaks.com</span>
+            <span class="contact-tagline">Hey there! If you want to work with us, get in touch or simply tell us how much you like Sibiu, use the form below or send us an e-mail at {{contactEmail}}</span>
             <div class="clearfix contact-form-wrap">
                 <form method="post" action="/contact" class="contact-form">
                     <input id="error-message" type="hidden" value="{{errorMessage}}"/>
@@ -47,7 +47,7 @@
                     </div>
                     <div class="details-item">
                     <span>Email:</span>
-                    office@agilefreaks.com
+                    {{contactEmail}}
                     </div>
                 </div>
             </div>
