--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body, html {
 
 .bg {
   /* The image used */
-  background-image: url("../images/bg.svg");
+  background-image: url("../images/bg-min.png");
 
   /* Full height */
   height: 100%; 
