--- a/css/style.css
+++ b/css/style.css
@@ -40,21 +40,20 @@ body, html {
     text-align: center;
 }
 
-.main-description {
+.description {
+    margin: 0 auto;
+    max-width: 1000px;
+    width: 85%;
+}
+
+.description__header {
     font-size: 4.5em;
     font-family: "Sharp Sans No1 Semibold";
     color: white;
     margin: 0 0 0.7em 0;
 }
 
-.second-first-description {
-    font-size: 2em;
-    font-family: "Sharp Sans No1 Medium";
-    color: white;
-    margin-bottom: 0;
-}
-
-.second-description {
+.description__paragraph {
     font-size: 2em;
     font-family: "Sharp Sans No1 Medium";
     color: white;
@@ -83,17 +82,17 @@ body, html {
     color: white;
 }
 
-.dot {
+.divider {
+    margin: 0 10px;
+}
+
+.divider__dot {
     height: 6px;
     width: 6px;
     background-color: #426BCE;
     border-radius: 50%;
     display: block;
     margin-bottom: .1em;
-}
-
-.dot-divider {
-    margin: 0 10px;
 }
 
 #big-dot-div {
@@ -142,26 +141,16 @@ body, html {
     padding: 0 10px;
 }
 
-address a {
+.contact__address {
     color: white;
 }
 
-.description {
-    margin: 0 auto;
-    max-width: 1000px;
-    width: 85%;
-}
-
 @media (max-width: 1200px) {
-    .main-description {
+    .description__header {
         font-size: 2.6em !important;
     }
 
-    .second-first-description {
-        font-size: 1.9em;
-    }
-
-    .second-description {
+    .description__paragraph {
         font-size: 1.9em !important;
     }
 
@@ -195,15 +184,11 @@ address a {
 }
 
 @media (max-width: 900px) {
-    .main-description {
+    .description__header {
         font-size: 2.1em !important;
     }
 
-    .second-first-description {
-        font-size: 1.7em;
-    }
-
-    .second-description {
+    .description__paragraph {
         font-size: 1.7em !important;
     }
 
@@ -228,15 +213,11 @@ address a {
 
 
 @media (max-width: 700px) {
-    .main-description {
+    .description__header {
         font-size: 2.1em !important;
     }
 
-    .second-first-description {
-        font-size: 1.7em;
-    }
-
-    .second-description {
+    .description__paragraph {
         font-size: 1.7em !important;
     }
 
@@ -263,15 +244,11 @@ address a {
 }
 
 @media (max-height: 900px) {
-    .main-description {
+    .description__header {
         font-size: 1.7em !important;
     }
 
-    .second-first-description {
-        font-size: 1.3em;
-    }
-
-    .second-description {
+    .description__paragraph {
         font-size: 1.3em !important;
     }
 
@@ -298,15 +275,11 @@ address a {
 }
 
 @media (max-height: 800px) {
-    .main-description {
+    .description__header {
         font-size: 1.5em !important;
     }
 
-    .second-first-description {
-        font-size: 1.2em;
-    }
-
-    .second-description {
+    .description__paragraph {
         font-size: 1.2em !important;
     }
 
